@@ -5,14 +5,17 @@ import io.github.mivek.exception.ParseException;
 import io.github.mivek.model.TAF;
 import io.github.mivek.parser.TAFParser;
 
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStreamReader;
-import java.net.URL;
-import java.nio.charset.StandardCharsets;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Stream;
 
 /**
  * Facade for TAF.
@@ -40,19 +43,26 @@ public final class TAFService extends AbstractWeatherCodeService<TAF> {
     }
 
     @Override
-    public TAF retrieveFromAirport(final String icao) throws IOException, ParseException {
+    public TAF retrieveFromAirport(final String icao) throws IOException, ParseException, URISyntaxException, InterruptedException {
         if (icao.length() != AbstractWeatherCodeService.ICAO) {
             throw new ParseException(ErrorCodes.ERROR_CODE_INVALID_ICAO);
         }
-        String website = NOAA_TAF_URL + icao.toUpperCase() // $NON-NLS-1$
-                + ".TXT"; //$NON-NLS-1$
-        URL url = new URL(website);
-        try (BufferedReader br = new BufferedReader(new InputStreamReader(url.openStream(), StandardCharsets.UTF_8))) {
-            StringBuilder sb = new StringBuilder();
-            // Throw the first line since it is not part of the TAF event.
-            br.lines().skip(1).forEach(currentLine -> sb.append(currentLine.replaceAll("\\s{2,}", "")).append("\n"));
-            return getParser().parse(format(sb.toString()));
-        }
+        String website = NOAA_TAF_URL + icao.toUpperCase()
+                + ".TXT";
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(new URI(website))
+                .GET()
+                .version(HttpClient.Version.HTTP_2)
+                .timeout(Duration.ofSeconds(5))
+                .build();
+
+        HttpResponse<Stream<String>> response = HttpClient.newBuilder()
+                .build()
+                .send(request, HttpResponse.BodyHandlers.ofLines());
+        StringBuilder sb = new StringBuilder();
+        // Throw the first line since it is not part of the TAF event.
+        response.body().skip(1).forEach(currentLine -> sb.append(currentLine.replaceAll("\\s{2,}", "")).append("\n"));
+        return getParser().parse(format(sb.toString()));
     }
 
     /**
